@@ -18,6 +18,7 @@ body{
 }
 
 /* ---------- Authentication ---------- */
+
 .logo {
 	background-image: url(images/pluxml.png);
 	margin: 10% auto 20px auto;
