@@ -445,7 +445,7 @@ Dies ist eine automatische mel, keine Notwendigkeit, es zu beantworten, danke.',
 'L_CONFIG_INFOS_NB_STATICS'							=> 'Anzahl der statischen Seiten:',
 'L_CONFIG_INFOS_WRITER'								=> 'Benutzername der aktuellen SESSION:',
 'L_PLUXML_CHECK_VERSION'							=> 'Aktualitätsprüfung von PluXml (über PluXml.org)',
-'L_PLUXML_UPDATE_UNAVAILABLE'						=> 'Update hat nicht funktioniert. Sie sollten	\'allow_url_fopen\' aktivieren.',
+'L_PLUXML_UPDATE_UNAVAILABLE'						=> 'Update hat nicht funktioniert. Sie sollten \'allow_url_fopen\' aktivieren.',
 'L_PLUXML_UPDATE_ERR'								=> 'Updatefunktion mit unbekanntem Fehler abgebrochen.',
 'L_PLUXML_UPTODATE'									=> 'Sie benutzen die aktuellste Version von PluXml',
 'L_PLUXML_UPDATE_AVAILABLE'							=> 'Eine neue Version ist verfügbar! Sie können sie hier herunterladen: ',
