@@ -320,7 +320,7 @@ Acesta este un Mel automat, nu este nevoie să răspundă, vă mulțumesc.',
 'L_CONFIG_VIEW_BYPAGE'										=> 'Numărul de articole afisate pe pagina',
 'L_CONFIG_VIEW_BYPAGE_ARCHIVES'								=> 'Numărul de elemente afişate pe pagină în arhivă',
 'L_CONFIG_VIEW_BYPAGE_TAGS'									=> 'Numărul de articole pe pagină în etichetele',
-'L_CONFIG_VIEW_BYPAGE_ADMIN'								=> 'Numărul de	elemente afişate pe pagină în administraţie',
+'L_CONFIG_VIEW_BYPAGE_ADMIN'								=> 'Numărul de elemente afişate pe pagină în administraţie',
 'L_CONFIG_VIEW_SORT_COMS'									=> 'Sortare comentarii',
 'L_CONFIG_VIEW_BYPAGE_ADMIN_COMS'							=> 'Numărul de comentarii pe pagină în admin',
 'L_CONFIG_VIEW_IMAGES'										=> 'Dimensiune imagine (latime x inaltime)',
@@ -332,7 +332,7 @@ Acesta este un Mel automat, nu este nevoie să răspundă, vă mulțumesc.',
 'L_CONFIG_VIEW_FEEDS_HEADLINE'								=> 'Vezi Headerul în articolele RSS',
 'L_CONFIG_VIEW_FEEDS_HEADLINE_HELP'							=> 'Dacă headerul este gol, conţinutul este afişat',
 'L_CONFIG_VIEW_FEEDS_FOOTER'								=> 'Text se adaugă şi o semnătură în partea de jos a fiecare articole feed RSS',
-'L_CONFIG_VIEW_UPDATE'										=> 'Editare Opţiuni	afişare',
+'L_CONFIG_VIEW_UPDATE'										=> 'Editare Opţiuni afişare',
 'L_CONFIG_VIEW_DISPLAY_EMPTY_CAT'							=> 'Afişarea categorii fără articolul',
 'L_CONFIG_HOMETEMPLATE'										=> 'Format din pagina de start',
 'L_CONFIG_ADVANCED_DESC'									=> 'Avansate de configurare',
@@ -379,7 +379,7 @@ Acesta este un Mel automat, nu este nevoie să răspundă, vă mulțumesc.',
 'L_CONFIG_EDITTPL_SELECT_FILE'								=> 'Selectaţi fişierul pentru a edita :',
 'L_CONFIG_EDITTPL_LOAD'										=> 'Sarcină',
 'L_CONFIG_INFOS_TITLE'										=> 'Informaţii privind PluXml',
-'L_CONFIG_INFOS_DESCRIPTION'								=> 'Informaţiile pe care le furniza informaţii cu privire la modul PluXml dumneavoastră şi poate	dovedi util pentru depanare.',
+'L_CONFIG_INFOS_DESCRIPTION'								=> 'Informaţiile pe care le furniza informaţii cu privire la modul PluXml dumneavoastră şi poate dovedi util pentru depanare.',
 'L_CONFIG_INFOS_NB_CATS'									=> 'Numărul de categorii :',
 'L_CONFIG_INFOS_NB_STATICS'									=> 'Numărul de pagini statice :',
 'L_CONFIG_INFOS_WRITER'										=> 'Editor-in Nume sesiune :',
@@ -441,7 +441,7 @@ Acesta este un Mel automat, nu este nevoie să răspundă, vă mulțumesc.',
 'L_PROFIL_CONFIRM_PASSWORD'									=> 'Confirmaţi parola',
 'L_PROFIL_UPDATE_PASSWORD'									=> 'Schimbaţi parola',
 'L_STATIC_BACK_TO_PAGE'										=> 'Înapoi la lista de pagini statice',
-'L_STATIC_UNKNOWN_PAGE'										=> 'Această pagină statică	nu există sau nu este accesibila !',
+'L_STATIC_UNKNOWN_PAGE'										=> 'Această pagină statică nu există sau nu este accesibila !',
 'L_STATIC_TITLE'											=> 'Editează codul sursă a paginei statice',
 'L_STATIC_VIEW_PAGE'										=> 'Vizualizează pagina',
 'L_STATIC_ON_SITE'											=> 'pe site',
@@ -496,7 +496,7 @@ Acesta este un Mel automat, nu este nevoie să răspundă, vă mulțumesc.',
 'L_MENU_CONFIG'												=> 'Setări',
 'L_MENU_PROFIL_TITLE'										=> 'Gestionează profilul',
 'L_MENU_PROFIL'												=> 'Profil',
-'L_WARNING_INSTALLATION_FILE'								=> 'Fişierul install.php încă se află în rădăcina	sit-ului <br /> PluXml. Din motive de securitate, se recomandă să-l <a class="lnkdelete" href="?del=install">ştergeţi</a>.',
+'L_WARNING_INSTALLATION_FILE'								=> 'Fişierul install.php încă se află în rădăcina sit-ului <br /> PluXml. Din motive de securitate, se recomandă să-l <a class="lnkdelete" href="?del=install">ştergeţi</a>.',
 'L_USER_UNKNOWN'											=> 'Utilizator necunoscut',
 'L_USER_LANG'												=> 'Limba utilizată ',
 'L_USER_MAIL'												=> 'Adresa de email',
